[gd_scene load_steps=8 format=3 uid="uid://c5smnenqltf5o"]

[ext_resource type="Texture2D" uid="uid://bdecfof4pwhky" path="res://assets/custom/objects/capture_point.png" id="1_5e3my"]
[ext_resource type="Script" path="res://objects/capture_point.gd" id="1_byklw"]
[ext_resource type="Texture2D" uid="uid://c7vy5a7xujj4m" path="res://assets/custom/objects/capture_point_blue.png" id="3_rlfsa"]
[ext_resource type="Texture2D" uid="uid://gmuxkp0ag4of" path="res://assets/custom/objects/capture_point_red.png" id="4_7exg3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_eoxf0"]
radius = 250.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6it0j"]
bg_color = Color(0, 0, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q1sip"]
bg_color = Color(1, 0, 0, 1)

[node name="CapturePoint" type="Area2D"]
script = ExtResource("1_byklw")

[node name="CaptureArea" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_eoxf0")

[node name="CaptureFlagNeutral" type="Sprite2D" parent="."]
position = Vector2(8, -24)
texture = ExtResource("1_5e3my")

[node name="CaptureFlagBlue" type="Sprite2D" parent="."]
visible = false
position = Vector2(8, -24)
texture = ExtResource("3_rlfsa")

[node name="CaptureFlagRed" type="Sprite2D" parent="."]
visible = false
position = Vector2(8, -24)
texture = ExtResource("4_7exg3")

[node name="CaptureTimer" type="Timer" parent="."]

[node name="CaptureBarBlue" type="ProgressBar" parent="."]
visible = false
offset_left = -24.0
offset_top = -56.0
offset_right = 24.0
offset_bottom = -48.0
theme_override_styles/fill = SubResource("StyleBoxFlat_6it0j")
max_value = 30.0
step = 1.0
value = 15.0
show_percentage = false

[node name="CaptureBarRed" type="ProgressBar" parent="."]
visible = false
offset_left = -24.0
offset_top = -56.0
offset_right = 24.0
offset_bottom = -48.0
theme_override_styles/fill = SubResource("StyleBoxFlat_q1sip")
max_value = 30.0
step = 1.0
value = 15.0
show_percentage = false

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="CaptureTimer" to="." method="_on_capture_timer_timeout"]
